fixed function references and enabled functions without any parameters